--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -5,7 +5,18 @@ padding:0;
 margin: 0;
 }
 
-.homepage-container h1 {
-  font-family: 'Jost', Futura, Helvetica, Arial, sans-serif;
+.slogan{
+    margin: 5% 7%  0% 7%
+}
 
+.slogan h1 {
+  font-family: 'Jost', Futura, Helvetica, Arial, sans-serif;
+  font-size:60px;
+    margin: 10px 0px 0px 0px;
+}
+
+.slogan h4 {
+  font-family: 'Jost', Futura, Helvetica, Arial, sans-serif;
+    font-size:30px;
+        margin: 30px 0px 0px 0px;
 }
