--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -10,13 +10,13 @@ margin: 0;
 }
 
 .slogan h1 {
-  font-family: 'Jost', Futura, Helvetica, Arial, sans-serif;
+  /* font-family: 'Jost', Futura, Helvetica, Arial, sans-serif; */
   font-size:60px;
     margin: 10px 0px 0px 0px;
 }
 
 .slogan h4 {
-  font-family: 'Jost', Futura, Helvetica, Arial, sans-serif;
+  /* font-family: 'Jost', Futura, Helvetica, Arial, sans-serif; */
     font-size:30px;
         margin: 30px 0px 0px 0px;
 }
