--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,6 +5,7 @@ body{
 button{
         cursor: pointer;
           border-radius: 20px;
+          border:none;
 }
 
 @font-face {
@@ -12,4 +13,28 @@ button{
   src: url('./font/BobbyJonesSoft.otf') format("opentype");
   /* font-weight: 300 800; */
   font-style: normal;
+}
+
+h1{
+  font-family: Jost, Futura, Helvetica, Arial, sans-serif;
+}
+
+h2{
+  font-family: bobbyJones, Animatic SC, Helvetica cursive;
+}
+
+
+h4{
+  font-family: Jost, Futura, Helvetica, Arial, sans-serif;
+}
+
+li{
+  font-family: bobbyJones, Animatic SC, Helvetica cursive;
+}
+
+p{
+   font-family: Jost, Futura, Helvetica, Arial, sans-serif;
+}
+div{
+   font-family: Jost, Futura, Helvetica, Arial, sans-serif;
 }
