--- a/react-app/src/components/UserProfile/UserProfile.css
+++ b/react-app/src/components/UserProfile/UserProfile.css
@@ -9,6 +9,8 @@ border-radius: 4px;
 object-fit: cover;
 }
 
+
+
 .userprof button {
   font-family: bobbyJones, Animatic SC, Helvetica cursive;
   font-size: 17px;
@@ -20,8 +22,41 @@ object-fit: cover;
        /* box-shadow:6px 8px #F8F3FF; */
 }
 
+.usersec1{
+    position: relative;
+    z-index:2;
+    margin: 60px 85px 0 85px;
+}
 .userprof h1{
-    font-size: 40px;
+    font-size: 45px;
+    margin: 40px 0;
+}
+
+.wave-2{
+margin-top: -60px;
+z-index: 8;
+}
+.usersec2{
+    z-index:2;
+    margin: -130px 85px 0px 85px;
+}
+
+.routine-section{
+    margin:40px;
+    display: grid;
+        grid-template-columns: 1fr 1fr;
+}
+/* .routine-tile{
+
+} */
+
+.routine-buttons{
+    display:flex;
+    flex-direction: column;
+    margin:40px;
+}
+.routine-buttons button{
+    margin:20px;
 }
 /* .habbit-bubble{
 
