--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -23,3 +23,13 @@
   height: 15px;
   margin-right: 5px;
 }
+
+.char-count {
+  font-size: 12px;
+  color: #888;
+}
+
+.char-count-red {
+  font-size: 12px;
+  color: red;
+}
