--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -1,6 +1,13 @@
 .create-routine-container{
-    height: 80vh
+    height: 80vh;
 }
+
+form{
+    width: 80%;
+    margin: auto;
+margin: 5% 10%
+}
+
 .suggested{
     max-height:60vh;
     overflow-y: auto;
@@ -33,3 +40,40 @@
   font-size: 12px;
   color: red;
 }
+/* .covers {
+  width: 100%;
+  height: auto;
+  margin:auto;
+} */
+
+.covers img {
+    border-radius: 20px;
+    margin:10px 25px;
+object-fit: cover;
+  width:235px;
+  height: 155px;
+}
+
+/* .step-container{
+    width: 80%;
+    margin: auto;
+    height: 60vh;
+} */
+.button-container{
+  display: flex;
+  justify-content: space-between;
+  /* width: 100%; */
+    position:relative;
+
+}
+
+/* .button-container button{
+
+} */
+
+/* .help{
+
+}
+.go{
+
+} */
