--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -17,6 +17,7 @@ margin: 5% 10%
   padding: 8px 12px;
   margin: 5px;
   font-size: 16px;
+  font-family: Jost
 }
 
 .suggested-habit-button.selected::before{
