--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -47,13 +47,44 @@ margin: 5% 10%
   margin:auto;
 } */
 
-.covers img {
+/* .covers img {
     border-radius: 20px;
     margin:10px 25px;
 object-fit: cover;
   width:235px;
   height: 155px;
   cursor:pointer;
+} */
+
+
+.covers-imgs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  max-width: 100%;
+  max-height: 80%;
+  margin: 10px;
+  /* one row if on mobile: */
+  @media (max-width: 768px) {
+    flex-direction: row;
+    overflow-x: auto;
+  }
+}
+
+/* Style for individual images */
+.covers img {
+  max-width: 100%;
+  height: 145px;
+    width: 30%;
+  border-radius: 20px;
+  object-fit: cover;
+    cursor:pointer;
+}
+
+.covers input{
+  width: 95%;
+  margin: auto;
 }
 
 /* .step-container{
