--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -1,11 +1,14 @@
 .create-routine-container{
     height: 80vh;
+      display: flex;
+  flex-direction: column;
 }
 
 form{
     width: 80%;
     margin: auto;
-margin: 5% 10%
+margin: 5% 10%;
+flex-grow: 1;
 }
 
 .suggested{
@@ -41,21 +44,6 @@ margin: 5% 10%
   font-size: 12px;
   color: red;
 }
-/* .covers {
-  width: 100%;
-  height: auto;
-  margin:auto;
-} */
-
-/* .covers img {
-    border-radius: 20px;
-    margin:10px 25px;
-object-fit: cover;
-  width:235px;
-  height: 155px;
-  cursor:pointer;
-} */
-
 
 .covers-imgs {
   display: flex;
@@ -71,8 +59,6 @@ object-fit: cover;
     overflow-x: auto;
   }
 }
-
-/* Style for individual images */
 .covers img {
   max-width: 100%;
   height: 145px;
@@ -96,8 +82,7 @@ object-fit: cover;
   display: flex;
   justify-content: space-between;
   /* width: 100%; */
-    position:relative;
-
+    /* position:relative; */
 }
 
 .habitss{
@@ -110,10 +95,6 @@ object-fit: cover;
     justify-content: space-between;
     align-items: center;
 }
-
-/* .button-container button{
-
-} */
 
 /* .help{
 
