--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -11,6 +11,10 @@ margin: 5% 10%;
 flex-grow: 1;
 }
 
+.selected{
+    /* color: #E3A72F; */
+     box-shadow:5px 6px #058789;
+}
 .suggested{
     max-height:60vh;
     overflow-y: auto;
@@ -61,7 +65,7 @@ flex-grow: 1;
 }
 .covers img {
   max-width: 100%;
-  height: 145px;
+  height: 125px;
     width: 30%;
   border-radius: 20px;
   object-fit: cover;
@@ -73,16 +77,24 @@ flex-grow: 1;
   margin: auto;
 }
 
-/* .step-container{
-    width: 80%;
-    margin: auto;
-    height: 60vh;
-} */
+.step-container{
+  margin-bottom: 80px;
+}
+
 .button-container{
   display: flex;
   justify-content: space-between;
   /* width: 100%; */
     /* position:relative; */
+}
+
+.button-container-bottom {
+    position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin:50px;
+  padding:20px;
 }
 
 .habitss{
@@ -96,9 +108,23 @@ flex-grow: 1;
     align-items: center;
 }
 
-/* .help{
 
+.start-button-container{
+  position: absolute;
+  /* bottom: 0 ;
+  left: 0;
+  right: 0; */
+    /* margin:50px; */
+      display: flex;
+  justify-content: space-evenly;
 }
-.go{
 
-} */
+.help{
+height: 200px;
+width: 200px;
+}
+
+.go{
+height: 200px;
+width: 200px;
+}
