--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -24,3 +24,9 @@ z-index: 3;
     font-size:20px;
         margin: 30px 0px 0px 0px;
 }
+
+.write{
+ display: flex;
+  justify-content: flex-end;
+    /* flex-direction: column; */
+}
