--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -1,32 +1,94 @@
+/* .blue
+    color:#058789;
+.orange
+    color:#D54B1A;
+.yellow
+    color: #E3A72F;
+  burgundy
+  #680416;
+
+    */
+
+
 .wave-1{
 /* background-image: url( '52.svg' ); */
 width: 100vw;
 padding:0;
-margin: -120px 0 0 0;
+margin: -7% 0 0 0;
 position:relative;
 z-index: 3;
 }
 
 .slogan{
-    margin: 45px 85px 0px 85px;
+    margin: 5% 10% 0 10%;
     position:relative;
     z-index: 4;
 }
 
 .slogan h1 {
   /* font-family: 'Jost', Futura, Helvetica, Arial, sans-serif; */
-  font-size:45px;
-    margin: 10px 0px 0px 0px;
+  /* font-size:45px; */
+      font-size: 4.5vw;
+    margin: 1% 0px 0px 0px;
 }
 
 .slogan h4 {
   /* font-family: 'Jost', Futura, Helvetica, Arial, sans-serif; */
-    font-size:20px;
-        margin: 30px 0px 0px 0px;
+    /* font-size:20px; */
+    font-size: 1.75vw;
+        margin: 3% 0px 0px 0px;
+}
+
+.home-background-container{
+    background-color: #680416;
+    position: relative;
+  z-index: 2;
 }
 
 .write{
  display: flex;
   justify-content: flex-end;
-    /* flex-direction: column; */
+  /* justify-content: flex-start; */
+  margin-top: -4%;
+  margin-right: 7%;
+  position: relative;
+  z-index: 5;
+  font-size: 3vw;
+  color: white;
+  cursor: pointer;
+  }
+
+.pencil{
+ margin-left: 2%;
+/* color: #680416; */
 }
+
+.home-posts-container{
+    width: 70%;
+    margin: auto;
+    height: 900px;
+    overflow-y: auto;
+}
+
+.home-post-tile{
+       box-shadow: 7px 9px #058789;
+       margin: 70px;
+       padding:30px;
+       border-radius: 20px;
+       background-color: white;
+}
+
+/* .home-post-user{
+
+} */
+
+.home-post-img{
+ height: 195px;
+ width: 255px;
+ border-radius: 20px;
+   object-fit: cover;
+}
+
+/* .home-post-content{
+
+} */
