--- a/react-app/src/components/Community/Community.css
+++ b/react-app/src/components/Community/Community.css
@@ -1,10 +1,40 @@
-.posts-container{
-    width: 80%;
+/* .blue
+    color:#058789;
+.orange
+    color:#D54B1A;
+.yellow
+    color: #E3A72F;
+  burgundy
+  #680416;
+
+    */
+.community-container{
+    width: 70%;
     margin: auto;
 }
 
+.feed{
+  margin: 100px 70px 70px 70px;
+  font-size: 2.5em;
+}
+
+.topic-button {
+  font-size:1em;
+  display: inline-block;
+  padding: 8px 16px;
+  margin: 3px;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+.topic-button.chosen{
+  box-shadow: 4px 6px #058789;
+}
+
 .post-tile{
-       box-shadow: 7px 9px #350079;
+       /* box-shadow: 7px 9px #350079; */
+       box-shadow: 9px 11px #E3A72F;
        margin: 70px;
        padding:30px;
        border-radius: 20px;
