--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -128,3 +128,56 @@ width: 200px;
 height: 200px;
 width: 200px;
 }
+
+.topics-container{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.topics-container button{
+flex-basis: 20%;
+margin: 1%;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.topics-container img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  display: block;
+}
+
+.top-topic-container{
+    display: flex;
+align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 90%;
+}
+
+  .top-topic-container button{
+flex-basis: 30%;
+margin: 1%;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.top-topic-container button.selected {
+ box-shadow:5px 6px #058789;
+}
+.top-topic-container img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  display: block;
+}
