--- a/react-app/src/components/DeleteRoutine/delete.css
+++ b/react-app/src/components/DeleteRoutine/delete.css
@@ -1,8 +1,22 @@
+#modal-content:has(.delete){
+    /* background-color: #F8F3FF; */
+    width: 35%;
+    /* min-height: 55vh;
+    max-height: 75vh; */
+            box-shadow: 7px 9px #058789;
+}
+
 .delete h3{
  margin: 50px
 }
 .delete button{
-     margin: 0px 50px
+    margin: 1em auto;
+      font-size: 1.2em;
+  width:40%;
+  height: 3em;
+  background-color: white;
+  display: block;
+     box-shadow:5px 6px #D54B1A;
 }
 
 .delete p{
@@ -10,5 +24,8 @@
 }
 
 .delete{
-    justify-content: center
+      flex-direction: column;
+         display: flex;
+        justify-content: center;
+    align-items: center;
 }
