pointless functionless footer I'm praying won't somehow break something

--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -54,7 +54,7 @@
 .sub{
          margin: 6%;
                  display: flex;
-        justify-content: center;
+        -content: center;
 }
 
 .sub button{
