--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -45,6 +45,28 @@ z-index: 3;
   z-index: 2;
 }
 
+/* .homepage-container button{ */
+  .logbutt{
+       display: flex;
+         margin-right: 28%;
+  /* justify-content: center; */
+  justify-content: flex-end;
+    align-items: center;
+  position: relative;
+    z-index: 5;
+}
+
+.homepage-container button{
+  color: white;
+      background-color: #680416;
+  font-size: 2.5vw;
+  /* font-family: Jost, Futura, Helvetica, Arial, sans-serif; */
+}
+/* .loginhome{
+ display: flex;
+  justify-content: flex-end;
+} */
+
 .write{
  display: flex;
   justify-content: flex-end;
