--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,6 +2,10 @@
 body{
     margin: 0
 }
+footer img {
+  max-width: 100%;
+  height: auto;
+}
 button{
         cursor: pointer;
           border-radius: 20px;
