using heart as placeholder since namny shapes are being silly

--- a/react-app/src/components/Progress/Progress.css
+++ b/react-app/src/components/Progress/Progress.css
@@ -22,7 +22,7 @@
  color: white;
 font-family: Jost, Futura, Helvetica, Arial, sans-serif;
 }
-.star {
+/* .star {
   background-color: #CDAEFF;
 }
 
@@ -32,4 +32,4 @@ font-family: Jost, Futura, Helvetica, Arial, sans-serif;
 
 .scalloped-circle {
   background-color: #058789;
-}
+} */
