--- a/react-app/src/components/Progress/Progress.css
+++ b/react-app/src/components/Progress/Progress.css
@@ -4,17 +4,24 @@
     align-items: center; */
     margin-left:6%;
 }
+
+.usersecc1{
+    position: relative;
+    z-index:2;
+    margin: 100px 85px 0 85px;
+}
 /* .habittext h3{
        display: flex;
         justify-content: center;
     align-items: center;
 } */
 
-.progress-container{
+/* .progress-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+  justify-content: center;
+} */
 
 /* .progress{
         justify-content: center;
@@ -27,7 +34,7 @@
 
 .routine-progress {
   width: 80%;
-  margin: 0 auto;
+  margin: auto;
   text-align: left;
 }
 
@@ -57,4 +64,8 @@ color: #E3A72F;
 
 .fa-certificate {
 color: #058789;
+}
+
+.fa-fire{
+      color:#D54B1A;
 }
