--- a/react-app/src/components/Community/Community.css
+++ b/react-app/src/components/Community/Community.css
@@ -53,3 +53,27 @@
 /* .post-content{
 
 } */
+
+.topics-container-one-row{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.topics-container-one-row button{
+flex-basis: 10%;
+margin: 1%;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.topics-container-one-row img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  display: block;
+}
