--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -8,7 +8,7 @@
 }
 
 .create-routine-container{
-    height: 80vh;
+    height: 90vh;
       display: flex;
   flex-direction: column;
 align-items: center;
@@ -25,12 +25,29 @@ align-items: center;
 
 .create-routine-container h3{
   margin-top:0;
-  font-size: 1.75em;
+  font-size: 1.6em;
     text-align: center;
+      /* white-space: nowrap; */
+}
+@media (max-width: 1024px) {
+  .create-routine-container h3 {
+    font-size: 1.4em;
+  }
+}
+@media (max-width: 768px) {
+  .create-routine-container h3 {
+    font-size: 1.2em;
+  }
+}
+@media (max-width: 480px) {
+  .create-routine-container h3 {
+    font-size: 1em;
+  }
 }
 
+
 form{
-    width: 80%;
+    width: 85%;
     margin: auto;
 margin: 5% 10%;
 flex-grow: 1;
@@ -38,23 +55,25 @@ flex-grow: 1;
 
 .step-container{
   margin-bottom: 120px;
-
+  padding-bottom: 120px;
 }
+
 .button-container{
   display: flex;
   justify-content: space-between;
   /* width: 100%; */
     /* position:relative; */
-
+      z-index: 2;
 }
+
 .button-container-bottom {
     position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  margin:50px;
+  margin:40px;
   padding:20px;
-
+  z-index: 2;
 }
 
 /* step 1 */
@@ -86,13 +105,13 @@ flex-grow: 1;
     align-items: center;
 }
 .help{
-height: 250px;
-width: 250px;
+height: 10em;
+width: 11em;
 }
 
 .go{
-height: 250px;
-width: 250px;
+height: 10em;
+width: 11em;
 }
 
 /* reused lotssssssss of places */
@@ -261,19 +280,30 @@ margin-left: 2em;
 .write-edit-habit{
   display:flex;
   flex-direction:column;
+  max-height: 80%
 }
+
+/* .write-edit-habit h3{
+  font-size: 1.35em;
+} */
+
 .write-edit-habit textarea {
     resize: none;
     height: 3vh;
         border-radius: 15px;
+             border: 1px solid  #E8DEF8;
     padding: 2em;
     font-family: Jost, Futura, Helvetica, Arial, sans-serif;
     font-size: 1em;
     margin-bottom: .5em;
 }
 
+.write-edit-habit textarea:focus {
+outline: 2px solid  #CDAEFF;
+}
+
 .silly{
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 /* .write-edit-habit select{
@@ -300,10 +330,14 @@ text-align: center;
 .selected-option{
     text-align: center;
         border-radius: 10px;
-        border: 1px solid black;
+             border: 1px solid  #E8DEF8;
         font-family: Jost, Futura, Helvetica, Arial, sans-serif;
             font-size: 1em;
             padding:5px;
+}
+
+.selected-option:focus{
+  outline: 2px solid  #CDAEFF;
 }
 
 .options {
@@ -311,7 +345,7 @@ text-align: center;
   top: 100%;
   left: 0;
   width: 100%;
-  border: 1px solid black;
+          border: 1px solid  #E8DEF8;
   border-radius: 10px;
   box-sizing: border-box;
   background-color: white;
@@ -329,7 +363,7 @@ text-align: center;
     color: #E3A72F;
        box-shadow:  5px 6px #058789;
        font-size: 1.5em;
-       margin: 3em auto;
+       margin: 3em auto 120px auto;
 }
 
 /* step 8 */
