--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -241,7 +241,7 @@ margin: 1%;
        font-size: 1.5em;
        margin: 10px auto;
        cursor: pointer;
-
+z-index:3
 }
 
 .row {
@@ -334,10 +334,7 @@ text-align: center;
         font-family: Jost, Futura, Helvetica, Arial, sans-serif;
             font-size: 1em;
             padding:5px;
-}
-
-.selected-option:focus{
-  outline: 2px solid  #CDAEFF;
+            cursor:pointer
 }
 
 .options {
@@ -349,7 +346,7 @@ text-align: center;
   border-radius: 10px;
   box-sizing: border-box;
   background-color: white;
-  z-index: 1;
+  z-index: 4;
 }
 
 .options div {
@@ -364,6 +361,7 @@ text-align: center;
        box-shadow:  5px 6px #058789;
        font-size: 1.5em;
        margin: 3em auto 120px auto;
+       z-index: 3;
 }
 
 /* step 8 */
